workaround for chatwidget overlap issue

--- a/sites/all/themes/cyberhus_evolution/css/cyberhus-evolution.styles.css
+++ b/sites/all/themes/cyberhus_evolution/css/cyberhus-evolution.styles.css
@@ -723,11 +723,15 @@ input.form-submit:active {
 
 /* The sticky CuraChat widgets in the right side of the window */
 .curachat-widgets .opeka-chat-foldout-wrapper {
-  top: 63%;
   /* Multi-site foldout widget styles */
 }
-.curachat-widgets .opeka-chat-foldout-wrapper.groupchat {
-  top: 35%;
+.curachat-widgets .opeka-chat-foldout-wrapper.pair {
+  top: 63%;
+  z-index: 12;
+}
+.curachat-widgets .opeka-chat-foldout-wrapper.group {
+  top: 38%;
+  z-index: 11;
 }
 .curachat-widgets .opeka-chat-foldout-wrapper.multi {
   top: 15%;
